--- a/template/default/footer.htm
+++ b/template/default/footer.htm
@@ -1,7 +1,7 @@
 <div class="clearfix"></div>
 <div id="footer">
     <div class="container">
-      <p>免责声明:本站所有内容均来自互联网收集，版权归原作者所有，如果侵犯了你的权益，请通知我们，我们会及时删除侵权内容，谢谢合作！</p>
+      <p>法律声明：本站内容均为网友上传，网站举办方负责审核和监督，如存在版权或非法内容，欢迎举报，我们将尽快予以删除。</p>
       <ul class="links">
         <li> <a href="javascript:;" data-href="/about.html" target="_blank">关于<!--{$site.title}--></a> </li>
         <li class="muted">·</li>
