--- a/template/iCMS/user/home.follower.htm
+++ b/template/iCMS/user/home.follower.htm
@@ -1,23 +1,23 @@
-<div class="title"><span>我的粉丝</span></div>
-  <div class="pg_follow w670">
+<div id="followerList">
     <table class="table table-striped">
+      <thead>
+        <tr>
+          <th colspan="3"><a class="nickname" data-tip="iCMS:ucard:<!--{$user.uid}-->" href="<!--{$user.urls.home}-->"><!--{$user.nickname}--></a>
+            关注了 <span><!--{$user.follow|num10K}--></span>人</th>
+        </tr>
+      </thead>
       <tbody>
-        <!--{iCMS:user:follow loop="true" page="true" row="10" fuid="$user.uid" followed="$user.uid"}-->
+        <!--{iCMS:user:follow loop="true" page="true" row="15" userid="$user.uid" followed="$me.uid"}-->
           <!--{include file="./userfollow.htm" import="true"}-->
         <!--{iCMSelse}-->
         <tr>
-          <td><i class="fa fa-ban"></i> 暂无粉丝</td>
+          <td colspan="3"><i class="fa fa-ban"></i> 暂无关注</td>
         </tr>
         <!--{/iCMS}-->
       </tbody>
-      <tfoot>
-        <tr>
-          <td colspan="3"><div class="iCMS_pagination"><!--{$iCMS.PAGE.NAV}--></div></td>
-        </tr>
-      </tfoot>
     </table>
-  </div>
-  <script>
+</div>
+<script>
   $(".btn_follow").click(function(event) {
     event.preventDefault();
     var $this = $(this);
@@ -36,4 +36,3 @@
     });
   });
 </script>
-
